Descrição detalhada das alterações feitas na branch Kubernetes