@@ -1,41 +1,53 @@
 package br.com.postechfiap.jlapp.application.core.usecase;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import br.com.postechfiap.jlapp.application.core.domain.ItemPedido;
 import br.com.postechfiap.jlapp.application.ports.in.ItemPedidoInputPort;
 import br.com.postechfiap.jlapp.application.ports.out.ItemPedidoOutputPort;
 import br.com.postechfiap.jlapp.interfaces.dto.ItemPedidoDTO;
 import br.com.postechfiap.jlapp.shared.logger.log.Logger;
+import lombok.RequiredArgsConstructor;
 
+@RequiredArgsConstructor
 public class ItemPedidoUseCase implements ItemPedidoInputPort {
 
-	private final ItemPedidoOutputPort itemPedidoOutputPort;
+    private final ItemPedidoOutputPort itemPedidoOutputPort;
+    private final Logger log;
 
-	private final Logger log;
+    @Override
+    public List<ItemPedidoDTO> inserir(List<ItemPedidoDTO> dtos) {
+        log.info("Convertendo DTOs para o domínio de ItemPedido e salvando");
+        List<ItemPedido> itemPedidos = dtos.stream()
+                                           .map(this::convertToItemPedido)
+                                           .collect(Collectors.toList());
 
-	public ItemPedidoUseCase(ItemPedidoOutputPort itemPedidoOutputPort, Logger log) {
-		this.itemPedidoOutputPort = itemPedidoOutputPort;
-		this.log = log;
-	}
+        List<ItemPedido> savedItemPedidos = itemPedidoOutputPort.inserir(itemPedidos);
+        log.info("Itens de pedido salvos com sucesso");
 
-	@Override
-	public List<ItemPedidoDTO> inserir(List<ItemPedidoDTO> dtos) {
-		log.info("Convertendo para o dominio de Item Pedido!");
-		List<ItemPedido> itemPedidos = itemPedidoOutputPort
-				.inserir(dtos.stream().map(it -> new ItemPedido().toItemPedido(it)).toList());
+        return savedItemPedidos.stream()
+                               .map(this::convertToItemPedidoDTO)
+                               .collect(Collectors.toList());
+    }
 
-		log.info("{} salvos com sucesso!", itemPedidos);
-		return itemPedidos.stream().map(it -> new ItemPedidoDTO().toItemPedidoDTO(it)).toList();
-	}
+    @Override
+    public List<ItemPedidoDTO> buscarItemPedido(Long idPedido) {
+        List<ItemPedido> itemPedidos = itemPedidoOutputPort.buscarItemPedido(idPedido);
+        log.info("Itens de pedido encontrados para o pedido ID: {}", idPedido);
 
-	@Override
-	public List<ItemPedidoDTO> buscarItemPedido(Long idPedido) {
-		List<ItemPedido> itemPedidos = itemPedidoOutputPort.buscarItemPedido(idPedido);
+        return itemPedidos.stream()
+                          .map(this::convertToItemPedidoDTO)
+                          .collect(Collectors.toList());
+    }
 
-		log.info("Itens Pedido com o pedido ID: {} encontrados {} !", idPedido, itemPedidos);
-		return itemPedidos.stream().map(it -> new ItemPedidoDTO().toItemPedidoDTO(it)).toList();
+    private ItemPedido convertToItemPedido(ItemPedidoDTO dto) {
+        // Lógica para converter ItemPedidoDTO em ItemPedido
+        return new ItemPedido().toItemPedido(dto);
+    }
 
-	}
-
+    private ItemPedidoDTO convertToItemPedidoDTO(ItemPedido itemPedido) {
+        // Lógica para converter ItemPedido em ItemPedidoDTO
+        return new ItemPedidoDTO().toItemPedidoDTO(itemPedido);
+    }
 }
